--- a/_13_red_black_trees_/makefile
+++ b/_13_red_black_trees_/makefile
@@ -5,4 +5,4 @@ a.o: a.c red_black_tree.h debug.h common.h
 red_black_tree.o: red_black_tree.c red_black_tree.h common.h
 	gcc -c red_black_tree.c
 clean:
-	rm red_black_tree.o a.o a.out
+	rm -f *.o *.exe *.out
